infra/cdk.out/QuoteMyAV-dev-VPC.template.json
{
 "Resources": {
  "QuoteMyAVVpcC4F11721": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/Resource"
   }
  },
  "QuoteMyAVVpcPublicSubnet1SubnetA9317852": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1/Subnet"
   }
  },
  "QuoteMyAVVpcPublicSubnet1RouteTable01E2A063": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1/RouteTable"
   }
  },
  "QuoteMyAVVpcPublicSubnet1RouteTableAssociationF460DEF8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuoteMyAVVpcPublicSubnet1RouteTable01E2A063"
    },
    "SubnetId": {
     "Ref": "QuoteMyAVVpcPublicSubnet1SubnetA9317852"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "QuoteMyAVVpcPublicSubnet1DefaultRouteE39BCE36": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "QuoteMyAVVpcIGW0E157CC9"
    },
    "RouteTableId": {
     "Ref": "QuoteMyAVVpcPublicSubnet1RouteTable01E2A063"
    }
   },
   "DependsOn": [
    "QuoteMyAVVpcVPCGW99EC935D"
   ],
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "QuoteMyAVVpcPrivateSubnet1SubnetA208775C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PrivateSubnet1/Subnet"
   }
  },
  "QuoteMyAVVpcPrivateSubnet1RouteTable2AA9A6FD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PrivateSubnet1/RouteTable"
   }
  },
  "QuoteMyAVVpcPrivateSubnet1RouteTableAssociation3604F029": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "QuoteMyAVVpcPrivateSubnet1RouteTable2AA9A6FD"
    },
    "SubnetId": {
     "Ref": "QuoteMyAVVpcPrivateSubnet1SubnetA208775C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "QuoteMyAVVpcIGW0E157CC9": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/IGW"
   }
  },
  "QuoteMyAVVpcVPCGW99EC935D": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "QuoteMyAVVpcIGW0E157CC9"
    },
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/VPCGW"
   }
  },
  "QuoteMyAVVpcSecretsManagerEndpointSecurityGroupED05EDA1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SecretsManagerEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "QuoteMyAVVpcC4F11721",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "QuoteMyAVVpcC4F11721",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SecretsManagerEndpoint/SecurityGroup/Resource"
   }
  },
  "QuoteMyAVVpcSecretsManagerEndpointF220FCCC": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "QuoteMyAVVpcSecretsManagerEndpointSecurityGroupED05EDA1",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "QuoteMyAVVpcPrivateSubnet1SubnetA208775C"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SecretsManagerEndpoint/Resource"
   }
  },
  "QuoteMyAVVpcSSMEndpointSecurityGroupC955ADA2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SSMEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "QuoteMyAVVpcC4F11721",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "QuoteMyAVVpcC4F11721",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ],
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SSMEndpoint/SecurityGroup/Resource"
   }
  },
  "QuoteMyAVVpcSSMEndpoint9E8F4761": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "QuoteMyAVVpcSSMEndpointSecurityGroupC955ADA2",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.ssm",
    "SubnetIds": [
     {
      "Ref": "QuoteMyAVVpcPrivateSubnet1SubnetA208775C"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/SSMEndpoint/Resource"
   }
  },
  "QuoteMyAVVpcS3Endpoint12175B76": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "QuoteMyAVVpcPublicSubnet1RouteTable01E2A063"
     },
     {
      "Ref": "QuoteMyAVVpcPrivateSubnet1RouteTable2AA9A6FD"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "quotemyav-dev"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "QuoteMyAVVpcC4F11721"
    }
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/QuoteMyAVVpc/S3Endpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12PwWrDMAyGn6V3x1u9vkAJo+zUkIxci6KoTG0qG1tuKKXvPpaFZuwk6ePjl+Sse3PWrWBMBfbnYuDO3hsFPBsY04HQ2Xsb0JRHaavSVLkbGJvcCekPW7raZ6VP6AZa+MK2KXlkUPbylE0V+QpKS8aHKEUh3YHSCLd56TxtVQG/LiRqJu8ISG3Ad+mDZ1HTEObIettFn8N0w3/QVuXTnkP/BDxMTcnniNMD+6wh68OI78me0svVbex6bV9Xp8RcxCzKF7L1b/0GDqKeS0UBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "QuoteMyAV-dev-VPC/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "QuoteMyAVVpcC4F11721"
   },
   "Export": {
    "Name": "QuoteMyAV-dev-VPC-VpcId"
   }
  },
  "ExportsOutputFnGetAttQuoteMyAVVpcC4F11721CidrBlock6FD1EDC9": {
   "Value": {
    "Fn::GetAtt": [
     "QuoteMyAVVpcC4F11721",
     "CidrBlock"
    ]
   },
   "Export": {
    "Name": "QuoteMyAV-dev-VPC:ExportsOutputFnGetAttQuoteMyAVVpcC4F11721CidrBlock6FD1EDC9"
   }
  },
  "ExportsOutputRefQuoteMyAVVpcC4F11721E250E57F": {
   "Value": {
    "Ref": "QuoteMyAVVpcC4F11721"
   },
   "Export": {
    "Name": "QuoteMyAV-dev-VPC:ExportsOutputRefQuoteMyAVVpcC4F11721E250E57F"
   }
  },
  "ExportsOutputRefQuoteMyAVVpcPrivateSubnet1SubnetA208775CBEDBF0A1": {
   "Value": {
    "Ref": "QuoteMyAVVpcPrivateSubnet1SubnetA208775C"
   },
   "Export": {
    "Name": "QuoteMyAV-dev-VPC:ExportsOutputRefQuoteMyAVVpcPrivateSubnet1SubnetA208775CBEDBF0A1"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
